--- a/Capstone.html
+++ b/Capstone.html
@@ -37,13 +37,13 @@
         <a href="gallery.html">Gallery</a>
         
     </div>
-        <center><h1> Places i want to visit  </h1></center>
+        <center><h1> My favourite players- </h1></center>
       <div class="carousel-container">
-             <img class="myslide" src="scene1.png" height="300" width="300">
-             <img class="myslide" src="scene2.png" height="300" width="300">
-             <img class="myslide" src="scene3.png" height="300" width="300">
-             <img class="myslide" src="scenee4.png" height="300" width="300">
-             <img class="myslide" src="scene5.png" height="300" width="300">
+             <img class="myslide" src="ney.jpg" height="300" width="300">
+             <img class="myslide" src="sunil.jpg" height="300" width="300">
+             <img class="myslide" src="messi.png" height="300" width="300">
+             <img class="myslide" src="chris.png" height="300" width="300">
+             <img class="myslide" src="images.jpg" height="300" width="300">
       </div>
          <script>
             var index=0;
