--- a/about.html
+++ b/about.html
@@ -33,9 +33,10 @@
         <a href="gallery.html">Gallery</a>
         
     </div>
-      <h1>This is about page</h1>
-
-
+      <center><img src="sports.jpg"></center>
+     <center><h4> This is a website based on sports.Perfect for people who loves playing sports.We have information about football,american football,basketball,golf and many more. </h4></center>
+        <center><h1>"A tool for sports espescially for sport fans or players"</h1>
+        </center>
 
 
 
