--- a/Football Website/about.html
+++ b/Football Website/about.html
@@ -21,24 +21,38 @@
         background-color:lightcoral;
         color:black;
      }
+     .footer{
+         display: flex;
+         justify-content: space-around;
+         background-color: #333;
+         color: #fff;
+         padding: 20px;
+         position:fixed;
+         bottom:0;        
+         left:0;
+         width: 100%;
+       }
 
 
     </style>
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="Capstone.html">Home</a>
+        <a class="active" href="myweb.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact Us</a>
         <a href="gallery.html">Gallery</a>
         <a href="guide.html">Guide</a>
+        <a href="match.html">Match</a>
     </div>
       <center><img src="foot.jpg"></center>
      <center><p>This is a website for a famous sport called football.Football is an important game from the point of view of the spectator as well as the player. This 90 minutes game is full of excitement and thrill. Moreover, it keeps the player mentally and physically healthy, and disciplined. And this ninety-minute game tests their sportsmanship, patience, and tolerance.</p></center>
         <center><h1>"Something to help your passion."</h1>
         </center>
 
-
+        <div class="footer">
+            @copyright -Made by Harrison Yambem
+    </div>
 
 
 
