--- a/Football Website/guide.html
+++ b/Football Website/guide.html
@@ -23,17 +23,32 @@
                 background-color:lightcoral;
                 color:black;
              }
+             .footer{
+         display: flex;
+         justify-content: space-around;
+         background-color: #333;
+         color: #fff;
+         padding: 20px;
+         position:fixed;
+         bottom:0;        
+         left:0;
+         width: 100%;
+       }
         
         
             </style>
         </head>
         <body>
+          <div class="footer">
+            @copyright -Made by Harrison Yambem
+    </div>
             <div class="topnav">
-                <a class="active" href="Capstone.html">Home</a>
+                <a class="active" href="myweb.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="contact.html">Contact Us</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="guide.html">Guide</a>
+                <a href="match.html">Rules</a>
             </div>
 </head>
 <body>
@@ -155,7 +170,9 @@
     }
   </script>
   <p>Football,also known as soccer is one of the most famous sports in the world.The organization called FIFA creates rules and regulations for the game.In this sport both the teams have eleven players and they try to score goals.It is not only a sport but pride,entertainment and many more for fans. Players can win world cup which is held every four years which determines the best country.There is a award callend ballandor which is given to the best player that year.</p>  
-  
+  <div class="footer">
+    @copyright -Made by Harrison Yambem
+</div>
 
 
 
