--- a/Football Website/contact.html
+++ b/Football Website/contact.html
@@ -21,17 +21,29 @@
         background-color:lightcoral;
         color:black;
      }
+     .footer{
+         display: flex;
+         justify-content: space-around;
+         background-color: #333;
+         color: #fff;
+         padding: 20px;
+         position:fixed;
+         bottom:0;        
+         left:0;
+         width: 100%;
+       }
 
 
     </style>
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="Capstone.html">Home</a>
+        <a class="active" href="myweb.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact Us</a>
         <a href="gallery.html">Gallery</a>
         <a href="guide.html">Guide</a>
+        <a href="match.html">Match </a>
     </div>
     
       <center><h1>Contact Me </h1>
@@ -52,7 +64,9 @@ marginwidth="0"
 <p> Phone number=9674589236</p>
 </center>
 
-
+<div class="footer">
+    @copyright -Made by Harrison Yambem
+</div>
 
 
 
