--- a/Football Website/myweb.html
+++ b/Football Website/myweb.html
@@ -26,16 +26,28 @@
         justify-content:center;
         align-items:center;
        }
+       .footer{
+         display: flex;
+         justify-content: space-around;
+         background-color: #333;
+         color: #fff;
+         padding: 20px;
+         position:fixed;
+         bottom:0;        
+         left:0;
+         width: 100%;
+       }
 
     </style>
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="Capstone.html">Home</a>
+        <a class="active" href="myweb.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact Us</a>
         <a href="gallery.html">Gallery</a>
         <a href="guide.html">Guide</a>
+        <a href="match.html">Rules</a>
         
     </div>
         <center><h1> Some very good players- </h1></center>
@@ -63,7 +75,9 @@
             }
             slider()
          </script>
-
+          <div class="footer">
+                  @copyright -Made by Harrison Yambem
+          </div>
 
 
 
